Thu Nov 13 14:45:30 UTC 2008  Johnny Willemsen  <jwillemsen@remedy.nl>

        * tests/Bug_1636_Regression/run_test.pl:
        * tests/Bug_1670_Regression/run_test.pl:
        * tests/Bug_1676_Regression/run_test.pl:
        * tests/Bug_2134_Regression/run_test.pl:
        * tests/Bug_2188_Regression/run_test.pl:
        * tests/Bug_2328_Regression/run_test.pl:
        * tests/Bug_2349_Regression/run_test.pl:
        * tests/Bug_2356_Regression/run_test.pl:
        * tests/Bug_2417_Regression/run_test.pl:
        * tests/Bug_2429_Regression/run_test.pl:
        * tests/Bug_2503_Regression/run_test.pl:
          Converted to the new test framework

        * tests/Bug_2417_Regression/server.cpp:
        * tests/Bug_2349_Regression/client.cpp:
        * tests/Bug_2349_Regression/server.cpp:
        * tests/Bug_2417_Regression/client.cpp:
          Added support to pass ior filename from the commandline

Thu Nov 13 10:49:30 UTC 2008  Johnny Willemsen  <jwillemsen@remedy.nl>

        * orbsvcs/DevGuideExamples/NotifyService/EventSequence/EventSequence.mpc:
        * orbsvcs/DevGuideExamples/NotifyService/Filtering/Filtering.mpc:
        * orbsvcs/DevGuideExamples/NotifyService/Messenger/NotifyServiceMessenger.mpc:
        * orbsvcs/DevGuideExamples/NotifyService/OfferSubscriptions/OfferSubscriptions.mpc:
        * orbsvcs/DevGuideExamples/NotifyService/QoSProperties/QoSProperties.mpc:
        * orbsvcs/DevGuideExamples/NotifyService/RTNotify/RTNotify.mpc:
        * orbsvcs/DevGuideExamples/NotifyService/SupplierSideNC/SupplierSideNC.mpc:
          Added custom idl project

Thu Nov 13 09:27:30 UTC 2008  Johnny Willemsen  <jwillemsen@remedy.nl>

        * orbsvcs/DevGuideExamples/ImplRepo/Basic/ImplRepo_Basic.mpc:
        * orbsvcs/DevGuideExamples/ImplRepo/ImplRepo.mpc:
        * orbsvcs/DevGuideExamples/ImplRepo/IORTable/ImplRepo_IORTable.mpc:
        * orbsvcs/DevGuideExamples/NamingService/corbaloc_Messenger/corbaloc_Messenger.mpc: